with gradient-based optimisation

--- a/MichalewiczFunction.ipynb
+++ b/MichalewiczFunction.ipynb
@@ -59,6 +59,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Gradient-based optimisation with the use of finite differences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x, y): # Defining Michalewicz function\n",
+    "    return -1 * ( (np.sin(x) * np.sin((1 * x**2) / np.pi)**20) + \\ \n",
+    "           (np.sin(y) * np.sin((2 * y**2) / np.pi)**20) )\n",
+    "           \n",
+    "v_func = np.vectorize(f) # Getting array as output instead of scalar\n",
+    "\n",
+    "x, y = np.meshgrid(np.linspace(-5, 5, 1000),\n",
+    "                   np.linspace(-5, 5, 1000))\n",
+    "\n",
+    "fig, ax = plt.subplots(1)\n",
+    "ax.contour(x, y, v_func(x, y), levels=20)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = 10**(-6) # Finite-difference approximation\n",
+    "\n",
+    "gradient = lambda x, y: np.array([ f(x+h, y)-f(x, y) , f(x, y+h)-f(x, y) ]) # Calculating gradient, finite-difference approximation instead of derivatives\n",
+    "gradnorm = lambda x, y: np.sum(gradient(x, y)**2)**(1/2) # normalized gradient\n",
+    "calcdir = lambda x, y: -gradient(x, y) / gradnorm(x, y) # normalized search direction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 0.2\n",
+    "ro = 0.5 # values between 0 and 1 \n",
+    "mu = 10**(-4) # standaard value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0 = 1.8 # starting point\n",
+    "y0 = 1.8\n",
+    "\n",
+    "fig, ax = plt.subplots(1)\n",
+    "ax.contour(x, y, v_func(x, y), levels=20)\n",
+    "plt.plot(x0, y0,'bo')\n",
+    "\n",
+    "for i in range(0,20):\n",
+    "    sdir = calcdir(x0, y0) # calculate the gradient to get the direction\n",
+    "\n",
+    "    # Backtracking algorithm\n",
+    "    step = alpha\n",
+    "    while True:\n",
+    "        if v_func(x0 + step*sdir[0], y0 + step*sdir[1]) <= v_func(x0, y0) + mu*step*np.dot(gradient(x0, y0),sdir):\n",
+    "                break\n",
+    "        step = ro*step\n",
+    "\n",
+    "    plt.plot(x0 + step*sdir[0], y0 + step*sdir[1],'bo') # calculate the placement of the next point\n",
+    "    x0 = x0 + step*sdir[0] # update point cooridnates\n",
+    "    y0 = y0 + step*sdir[1] # update point cooridnates\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Nelder Mead Function"
    ]
   },
@@ -731,7 +812,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -745,12 +826,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c279406ff5d61bb25341fa7999fe580636aeb8e854bd6ef80d6f4e7cbb682c9c"
+    "hash": "f6716dbedf63cc3cc3454830c6e7cfdb12d0aa2e0dca19a8f02decd88c98998a"
    }
   }
  },
