--- a/MichalewiczFunction.ipynb
+++ b/MichalewiczFunction.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import norm\n",
+    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "from sklearn.gaussian_process.kernels import Matern\n",
+    "from matplotlib import cm  # color map\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from operator import itemgetter\n",
+    "from numpy import exp\n",
+    "from numpy import sqrt\n",
+    "from numpy import cos\n",
+    "from numpy import e\n",
+    "from numpy import pi\n",
+    "from matplotlib.animation import FuncAnimation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -20,11 +42,6 @@
    ],
    "source": [
     "# michalewicz_graph.py\n",
-    "\n",
-    "from matplotlib import cm  # color map\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "\n",
     "X = np.linspace(0, 3.2, 50)    \n",
     "Y = np.linspace(0, 3.2, 50)    \n",
@@ -58,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,23 +178,6 @@
    "metadata": {},
    "source": [
     "Nelder Mead Function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from operator import itemgetter\n",
-    "\n",
-    "from numpy import exp\n",
-    "from numpy import sqrt\n",
-    "from numpy import cos\n",
-    "from numpy import e\n",
-    "from numpy import pi"
    ]
   },
   {
@@ -590,9 +590,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.animation import FuncAnimation\n",
     " \n",
     "def f(x,y):\n",
     "    \"Michalewicz function\"\n",
@@ -859,27 +856,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from numpy import exp\n",
-    "from numpy import sqrt\n",
-    "from numpy import cos\n",
-    "from numpy import e\n",
-    "from numpy import pi\n",
-    "\n",
-    "from scipy.stats import norm\n",
-    "\n",
-    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
-    "from sklearn.gaussian_process.kernels import Matern"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def f(x):\n",
     "    \"Michalewicz function\"\n",
     "    return -1 * ( (np.sin(x[0]) * np.sin((1 * x[0]*2) / np.pi)*20) + \\\n",
@@ -888,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1005,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f6716dbedf63cc3cc3454830c6e7cfdb12d0aa2e0dca19a8f02decd88c98998a"
+    "hash": "7758e92e9a61d7a3490898707f7eeb937c85e9d1e8d4e877cc6c187218f226d5"
    }
   }
  },
